# explain-repo-mcp

./: .gitignore  EVALS.md  PUBLISHING.md  README.md  pyproject.toml  server.json
scripts/: bench.py
src/explain_repo_mcp/: __init__.py  drilldown.py  indexer.py  overview.py  ranker.py  server.py  tokens.py  walker.py
src/explain_repo_mcp/queries/: c-tags.scm  cpp-tags.scm  csharp-tags.scm  java-tags.scm  javascript-tags.scm  php-tags.scm  ruby-tags.scm  rust-tags.scm  typescript-tags.scm
tests/: test_drilldown.py  test_languages.py  test_smoke.py
